# django_admin_inline_generated_field_bug

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
example/: admin.py  models.py  tests.py
example/migrations/: 0001_initial.py
project/: settings.py
