[tool.poetry]
name = "unique-together-generated-field"
version = "0.1.0"
description = ""
authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
psycopg = { version = "^3.1.16", extras = ["binary"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
